--- a/.github/workflows/update-todoist.yml
+++ b/.github/workflows/update-todoist.yml
@@ -3,8 +3,7 @@ name: Todoist Readme
 on:
   workflow_dispatch:
   schedule:
-    # Runs every minute
-    - cron: "* * * * *"
+    - cron: "0 18 * * *"
 
 jobs:
   update-readme:
